crates/teamctl-ui/tests/snapshots/snapshots__mailbox_detail_modal_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: s
---
┌AGENTS────────────────────┐┌DETAIL · writing:manager──────────────────────────────────────────────────────────────────┐
│ o  manager               ││                      (no scrollback yet — agent may be starting up)                      │
│                          ││                                                                                          │
│                   ┌MESSAGE · id 42 · Esc/q to close──────────────────────────────────────────────┐                   │
│                   │from:      user:telegram                                                      │                   │
│                   │to:        writing:manager                                                    │                   │
│                   │kind:      DM                                                                 │                   │
│                   │time:      1970-01-01 00:00:00 UTC                                            │                   │
│                   │transport: via telegram                                                       │                   │
│                   │                                                                              │                   │
│                   │shipping the detail modal — please review when you have a moment.             │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │───────────────────┘
│                   │                                                                              │───────────────────┐
│                   │                                                                              │                   │
│                   │                                                                              │ a mom        00:00│
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   └──────────────────────────────────────────────────────────────────────────────┘                   │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
Tab cycle panes  ·  j/k row · f filter · / search · ⏎ detail · q quit                                ? help · t tutorial
/fixture                                                                                           CPU 0% · RAM 0.0/0 GB
