crates/teamctl-ui/tests/snapshots/snapshots__mailbox_first_layout_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌CHANNELS────────────────┐┌FEED────────────────────────────────────────────────────────────────┐┌PARTICIPANTS──────────┐
│      (no channels)     ││                        (no channel traffic)                        ││        (none)        │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
│                        ││                                                                    ││                      │
└────────────────────────┘└────────────────────────────────────────────────────────────────────┘└──────────────────────┘
Tab cycle panes  ·  / search · ⏎ open · @ send · q quit                                              ? help · t tutorial
