crates/teamctl-ui/tests/snapshots/snapshots__mailbox_head_anchored_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: s
---
┌AGENTS────────────────────┐┌DETAIL · writing:manager──────────────────────────────────────────────────────────────────┐
│ *  manager               ││                      (no scrollback yet — agent may be starting up)                      │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          │└──────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌MAILBOX───────────────────────────────────────────────────────────────────────────────────┐
│                          ││ Inbox    Sent    Channel    Wire                                                         │
│                          ││[writing:dev1] msg #01                                                               00:00│
│                          ││[writing:dev1] msg #02                                                               00:00│
│                          ││[writing:dev1] msg #03                                                               00:00│
│                          ││[writing:dev1] msg #04                                                               00:00│
│                          ││[writing:dev1] msg #05                                                               00:00│
│                          ││[writing:dev1] msg #06                                                               00:00│
│                          ││[writing:dev1] msg #07                                                               00:00│
│                          ││[writing:dev1] msg #08                                                               00:00│
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
Tab cycle panes  ·  / search · ⏎ open · @ send · q quit                                              ? help · t tutorial
/fixture                                                                                           CPU 0% · RAM 0.0/0 GB
