crates/teamctl-ui/tests/snapshots/snapshots__mailbox_inbox_folded_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌AGENTS────────────────────┐┌DETAIL · writing:manager──────────────────────────────────────────────────────────────────┐
│ o  manager               ││                      (no scrollback yet — agent may be starting up)                      │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          │└──────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌MAILBOX───────────────────────────────────────────────────────────────────────────────────┐
│                          ││ Inbox    Sent                                                                            │
│                          ││[writing:dev1] ready for review                                                      00:00│
│                          ││[#devs] [writing:critic] looks tight                                                 00:00│
│                          ││[#all] [user:cli] 0.7.1 release cut · CHANGELOG updated                              00:00│
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
Tab cycle panes  ·  / search · ⏎ open · @ send · q quit                                              ? help · t tutorial
/fixture                                                                                           CPU 0% · RAM 0.0/0 GB
