crates/teamctl-ui/tests/snapshots/snapshots__mailbox_sent_with_rows_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌AGENTS────────────────────┐┌DETAIL · writing:manager──────────────────────────────────────────────────────────────────┐
│ *  manager               ││                      (no scrollback yet — agent may be starting up)                      │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          │└──────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌MAILBOX───────────────────────────────────────────────────────────────────────────────────┐
│                          ││ Inbox    Sent    Channel    Wire                                                         │
│                          ││[writing:manager] T-079 needs the wave-3 split first                                      │
│                          ││[writing:manager] blocking on review for #88                                              │
│                          ││[writing:manager] all 5 PRs merged · 0.7.1 ready                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
Tab cycle panes  ·  ← / → tabs · ⏎ open · ! broadcast · q quit                                       ? help · t tutorial
