crates/teamctl-ui/tests/snapshots/snapshots__mailbox_wire_with_rows_120x30.snap
---
source: crates/teamctl-ui/tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌AGENTS────────────────────┐┌DETAIL · writing:manager──────────────────────────────────────────────────────────────────┐
│ *  manager               ││                      (no scrollback yet — agent may be starting up)                      │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          │└──────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌MAILBOX───────────────────────────────────────────────────────────────────────────────────┐
│                          ││ Inbox    Channel    Wire                                                                 │
│                          ││[user:cli] 0.7.1 release cut · CHANGELOG updated                                          │
│                          ││[writing:eng_lead] T-079 cluster Wave 3 dispatching                                       │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
│                          ││                                                                                          │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
Tab cycle panes  ·  [ / ] tabs · ⏎ open · ! broadcast · q quit                                       ? help · t tutorial
